Document PPDG/src/objects/System_Checks__c.object
<CustomObject>
    <description>For use to monitor and track system checks: Weekly, fortnightly, monthly and quarterly check and Salesforce checks</description>
    <fields>
        <fullName>ACS_Server_Manual_Time_Check_Comments__c</fullName>
        <label>ACS Server Manual Time Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ACS_Server_Manual_Time_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACS Server Manual Time Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checks8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACS_Server_Manual_Time_Check_Comp_Date__c</fullName>
        <label>ACS Server Manual Time Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACS_Server_Manual_Time_Check_Priority__c</fullName>
        <label>ACS Server Manual Time Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACS_Server_Manual_Time_Final_RAG__c</fullName>
        <label>ACS Server Manual Time Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACS_Server_Manual_Time_Initial_R__c</fullName>
        <label>ACS Server Manual Time Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AV_installed_checked_date__c</fullName>
        <label>AV installed checked date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AV_installed_comments__c</fullName>
        <label>AV installed comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AV_installed_on_new_machines__c</fullName>
        <label>AV installed on new machines</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Directory_Check_Comments__c</fullName>
        <label>Active Directory Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Active_Directory_Check_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Directory Check Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Directory_Check_Completed_Date__c</fullName>
        <label>Active Directory Check Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Directory_Check_Final_RAG__c</fullName>
        <label>Active Directory Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Directory_Check_Initial_RAG__c</fullName>
        <label>Active Directory Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Directory_Check_Priority__c</fullName>
        <label>Active Directory Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Sync_Check_Comments__c</fullName>
        <label>Active Sync Check Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_Sync_Check_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Sync Check Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_ChecksjvjC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Sync_Check_Completion_Date__c</fullName>
        <label>Active Sync Check Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Sync_Check_Final_RAG__c</fullName>
        <label>Active Sync Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Sync_Check_Initial_RAG__c</fullName>
        <label>Active Sync Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App_credits_check_comments__c</fullName>
        <label>App credits check comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>App_credits_check_date__c</fullName>
        <label>App credits check date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backup_PAC_Card_System_Comments__c</fullName>
        <label>Backup PAC Card System Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Backup_PAC_Card_System_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup PAC Card System Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspxBv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backup_PAC_Card_System_Comp_Date__c</fullName>
        <label>Backup PAC Card System Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backup_PAC_Card_System_Final_RAG__c</fullName>
        <label>Backup PAC Card System Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backup_PAC_Card_System_Initial_RAG__c</fullName>
        <label>Backup PAC Card System Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backup_PAC_Card_System_Priority__c</fullName>
        <label>Backup PAC Card System Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Camera_Check_Comments__c</fullName>
        <label>Branch Camera Check Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branch_Camera_Check_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch Camera Check Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checksjvjb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Camera_Check_Completed_Date__c</fullName>
        <label>Branch Camera Check Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Branch_Camera_Check_Final_RAG__c</fullName>
        <label>Branch Camera Check Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch_Camera_Check_Initial_RAG__c</fullName>
        <label>Branch Camera Check Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Check_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSC Report Check Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checksjvi9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Date__c</fullName>
        <label>CSC Report Check Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Final_RAG__c</fullName>
        <label>CSC Report Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSC_Report_RAG_Status__c</fullName>
        <label>CSC Report Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSC_Report__c</fullName>
        <label>CSC Report Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Guest_Wifi_Password_Comments__c</fullName>
        <label>Change Guest Wifi Password Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Change_Guest_Wifi_Password_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Guest Wifi Password Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspwrW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Guest_Wifi_Password_Comp_Date__c</fullName>
        <label>Change Guest Wifi Password Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Guest_Wifi_Password_Final_RAG__c</fullName>
        <label>Change Guest Wifi Password Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Guest_Wifi_Password_Initial_RAG__c</fullName>
        <label>Change Guest Wifi Password Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Guest_Wifi_Password_Priority__c</fullName>
        <label>Change Guest Wifi Password Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_2_Daily_Schedule_Comments__c</fullName>
        <label>Check 2 Daily Schedule Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_2_Daily_Schedule_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check 2 Daily Schedule Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_ChecksjvkU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_2_Daily_Schedule_Completed_Date__c</fullName>
        <label>Check 2 Daily Schedule Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_2_Daily_Schedule_Final_RAG__c</fullName>
        <label>Check 2 Daily Schedule Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_2_Daily_Schedule_Initial_RAG__c</fullName>
        <label>Check 2 Daily Schedule Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_5_Random_Patch_Ports_Comments__c</fullName>
        <label>Check 5 Random Patch Ports Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Check_5_Random_Patch_Ports_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check 5 Random Patch Ports Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checkspwwg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_5_Random_Patch_Ports_Comp_Date__c</fullName>
        <label>Check 5 Random Patch Ports Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_5_Random_Patch_Ports_Final_RAG__c</fullName>
        <label>Check 5 Random Patch Ports Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_5_Random_Patch_Ports_Initial_RAG__c</fullName>
        <label>Check 5 Random Patch Ports Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_5_Random_Patch_Ports_Priority__c</fullName>
        <label>Check 5 Random Patch Ports Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Laptops_Are_Encrypted_Comments__c</fullName>
        <label>Check Laptops Are Encrypted Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Check_Laptops_Are_Encrypted_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check Laptops Are Encrypted Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checkspx3X</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Laptops_Are_Encrypted_Comp_Date__c</fullName>
        <label>Check Laptops Are Encrypted Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Laptops_Are_Encrypted_Final_RAG__c</fullName>
        <label>Check Laptops Are Encrypted Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_Laptops_Are_Encrypted_Initial_RAG__c</fullName>
        <label>Check Laptops Are Encrypted Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_Laptops_Are_Encrypted_Priority__c</fullName>
        <label>Check Laptops Are Encrypted Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_User_Account_HR_List_initial_RA__c</fullName>
        <label>Check User Account HR List initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_User_Accounts_HR_List_Comments__c</fullName>
        <label>Check User Accounts HR List Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Check_User_Accounts_HR_List_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check User Accounts HR List Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspxCy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_User_Accounts_HR_List_Comp_Date__c</fullName>
        <label>Check User Accounts HR List Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_User_Accounts_HR_List_Final_RAG__c</fullName>
        <label>Check User Accounts HR List Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_User_Accounts_HR_List_Priority__c</fullName>
        <label>Check User Accounts HR List Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_devices_Websense_Initial_RAG__c</fullName>
        <label>Check devices Websense Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_devices_using_Websense_Comments__c</fullName>
        <label>Check devices using Websense Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Check_devices_using_Websense_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check devices using Websense Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checkspx5i</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_devices_using_Websense_Comp_Date__c</fullName>
        <label>Check devices using Websense Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_devices_using_Websense_Final_RAG__c</fullName>
        <label>Check devices using Websense Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_devices_using_Websense_Priority__c</fullName>
        <label>Check devices using Websense Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_firewall_rules_HO_Comments__c</fullName>
        <label>Check firewall rules - HO Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Check_firewall_rules_HO_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check firewall rules - HO Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checkspx9a</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_firewall_rules_HO_Comp_Date__c</fullName>
        <label>Check firewall rules - HO Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_firewall_rules_HO_Final_RAG__c</fullName>
        <label>Check firewall rules - HO Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_firewall_rules_HO_Initial_RAG__c</fullName>
        <label>Check firewall rules - HO Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_firewall_rules_HO_Priority__c</fullName>
        <label>Check firewall rules - HO Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_list_view_security_comments__c</fullName>
        <label>Check list view security comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Check_list_view_security_completed_date__c</fullName>
        <label>Check list view security completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_list_view_security_final_RAG__c</fullName>
        <label>Check list view security final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_list_view_security_initial_RAG__c</fullName>
        <label>Check list view security initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_date__c</fullName>
        <label>Completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_customer_data_amendments_check__c</fullName>
        <label>Core customer data amendments check date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_customer_data_amendments_comments__c</fullName>
        <label>Core customer data amendments comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Delete_any_test_customers_comments__c</fullName>
        <label>Delete any test customers comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Delete_any_test_customers_comp_date__c</fullName>
        <label>Delete any test customers comp date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delete_any_test_customers_final_RAG__c</fullName>
        <label>Delete any test customers final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delete_any_test_customers_initial_RAG__c</fullName>
        <label>Delete any test customers initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delete_new_account_profiles_comments__c</fullName>
        <label>Delete new account profiles comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Delete_new_account_profiles_comp_date__c</fullName>
        <label>Delete new account profiles comp date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delete_new_account_profiles_final_RAG__c</fullName>
        <label>Delete new account profiles final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delete_new_account_profiles_initial_RAG__c</fullName>
        <label>Delete new account profiles initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delete_reports_run_1_year_comments__c</fullName>
        <label>Delete reports run 1 year comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Delete_reports_run_1_year_comp_date__c</fullName>
        <label>Delete reports run 1 year comp date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delete_reports_run_1_year_final_RAG__c</fullName>
        <label>Delete reports run 1 year final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delete_reports_run_1_year_initial_RAG__c</fullName>
        <label>Delete reports run 1 year initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Desktop_Patch_Management_Check_Comments__c</fullName>
        <label>Desktop Patch Management Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Desktop_Patch_Management_Check_Comp_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Desktop Patch Management Check Comp By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_CheckspwW4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desktop_Patch_Management_Check_Comp_Date__c</fullName>
        <label>Desktop Patch Management Check Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desktop_Patch_Management_Check_Priority__c</fullName>
        <label>Desktop Patch Management Check Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desktop_Patch_Management_Final_RAG__c</fullName>
        <label>Desktop Patch Management Final RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Desktop_Patch_Management_Initial_RAG__c</fullName>
        <label>Desktop Patch Management Initial RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_Admin_Group_Check_Comments__c</fullName>
        <label>Domain Admin Group Check Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Domain_Admin_Group_Check_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain Admin Group Check Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Checks4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain_Admin_Group_Check_Completed_Date__c</fullName>
        <label>Domain Admin Group Check Completed Date</label>
        <type>Date</type>
    </fields>
</CustomObject>